Building activity_note.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#ffd24d</color>
     <color name="colorPrimaryDark">#e6ac00</color>
     <color name="colorAccent">#d9d9d9</color>
-    <color name="lightYellow">#fffb03</color>
+    <color name="lightYellow">#fffdaf</color>
     <color name="mediumYellow">#ffdf80</color>
     <color name="darkYellow">#ffd24d</color>
     <color name="lightGrey">#d9d9d9</color>
